# lmpy

./: .gitignore  README  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml  release.yml
benchmarks/: README.md  bench.R  bench.py  run.sh
benchmarks/results/: python.before-cache.csv  python.csv  r.csv  (+2 more)
benchmarks/results-pre-vectorized/: python.csv
corpus/: feature_matrix.yaml  harvested_raw.yaml  mgcv.yaml
datasets/: sperm.comp1.csv
example/: dataframe.ipynb  gam.ipynb  gam_example_ran_et al_2020.ipynb  lm.ipynb  lme.ipynb  stats-data.R  stats-tests-as-lm.ipynb
hea/: __init__.py  _pchisqsum.py  compare.py  data.py  dataframe.py  design.py  family.py  formula.py  gam.py  glm.py  lm.py  lme.py  stats.py  utils.py
lmpy/: __init__.py  compare.py  data.py  design.py  family.py  formula.py  gam.py  glm.py  lm.py  lme.py  stats.py  utils.py
scripts/: coverage_audit.R  export_canonical_data.R  export_data.R  harvest.R  make_fixtures.R  make_glm_oracles.R  refresh_schemas.R  synthetic_data.R  tag_corpus.R  validate_bars.py  validate_expand.py  validate_materialize.py  validate_parser.py  validate_smooths.py
tests/: conftest.py  test_bars.py  test_dataframe.py  test_expand.py  test_family.py  test_format.py  test_gam_examples.py  test_gam_vis.py  test_glm_compare.py  test_glm_edge_cases.py  test_glm_examples.py  test_glm_oracles_present.py  test_itsadug_plot_diff.py  test_lm_examples.py  test_lme_examples.py  test_materialize.py  test_parser.py  test_plot.py  test_smooths.py  test_smooths_predict.py  test_wr_fixtures.py
(+1690 files in other folders)
