[tool.pytest.ini_options]
pythonpath = [".", "tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lmpy"
version = "0.1.0"
description = "Linear Models with Python"
authors = []
requires-python = ">=3.13.0"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "polars>=1.20.0",
    "pyarrow>=24.0.0",
    "scikit-sparse>=0.5.0",
    "scipy>=1.15.1",
]

license = "GPL-3.0-or-later"
readme = {file = "README.md", content-type = "text/markdown"}

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "formulae>=0.5.4",
    "formulaic>=1.1.1",
]

[tool.setuptools]
packages = {find = {}}
include-package-data = true

